# goLEM

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  sonar-project.properties
.github/workflows/: go.yml
cli/: README.md
core/: BUILD.bazel  go.mod  golem.go
core/consume/: BUILD.bazel  consumer.go  jsonFile.go  jsonFile_test.go
core/discover/: BUILD.bazel  announcer.go  announcer_test.go  listener.go  listener_test.go
core/message/: BUILD.bazel  message.go  message.proto  receiver.go  sender.go
core/mock/: BUILD.bazel  listener.go  listener_test.go
core/process/: BUILD.bazel  processor.go  regexFilter.go  regexFilter_test.go
core/provide/: BUILD.bazel  go.mod  jsonFile.go  jsonFile_test.go  jsonfile.go  jsonfile_test.go  provider.go
core/registry/: BUILD.bazel  registry.go  registry_test.go
core/registry/testdata/: 9735db7c-8c97-4c5a-8ead-1d15850d9eae
run/: README.md
test/: README.md
