load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "discover",
    srcs = ["announcer.go"],
    importpath = "github.com/sekkycodes/core/discover",
    visibility = ["//visibility:public"],
)

go_test(
    name = "discover_test",
    srcs = ["announcer_test.go"],
    embed = [":discover"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
