load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "tutorial_proto",
    srcs = ["message.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "tutorial_go_proto",
    importpath = "github.com/sekkycodes/core/message",
    proto = ":tutorial_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "message",
    srcs = ["message.go"],
    embed = [":tutorial_go_proto"],
    importpath = "github.com/sekkycodes/core/message",
    visibility = ["//visibility:public"],
)
