load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "process",
    srcs = [
        "processor.go",
        "regexFilter.go",
    ],
    importpath = "github.com/sekkycodes/core/process",
    visibility = ["//visibility:public"],
)

go_test(
    name = "process_test",
    srcs = ["regexFilter_test.go"],
    embed = [":process"],
    deps = ["@com_github_golang_mock//gomock:go_default_library"],
)
