load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "provide",
    srcs = [
        "jsonFile.go",
        "provider.go",
    ],
    importpath = "github.com/sekkycodes/core/provide",
    visibility = ["//visibility:public"],
)

go_test(
    name = "provide_test",
    srcs = ["jsonFile_test.go"],
    data = glob(["testdata/**"]),
    embed = [":provide"],
    deps = ["@com_github_stretchr_testify//assert"],
)
