load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "registry_test",
    srcs = ["registry_test.go"],
    data = glob(["testdata/**"]),
    embed = [":registry"],
    deps = ["@com_github_stretchr_testify//assert"],
)

go_library(
    name = "registry",
    srcs = ["registry.go"],
    importpath = "github.com/sekkycodes/core/registry",
    visibility = ["//visibility:public"],
    deps = ["@com_github_google_uuid//:go_default_library"],
)
